Refactoring and add Java doc